--- a/index.html
+++ b/index.html
@@ -21,9 +21,31 @@
                     placeholder="Search"
                     class="search"
                 />
+
+                <select id="genre" class="genre">
+                    <option value="">All Genres</option>
+                    <option value="28">Action</option>
+                    <option value="12">Adventure</option>
+                    <option value="16">Animation</option>
+                    <option value="35">Comedy</option>
+                    <option value="18">Drama</option>
+                    <option value="10751">Family</option>
+                    <option value="14">Fantasy</option>
+                    <option value="27">Horror</option>
+                    <option value="878">Science-Fiction</option>
+                    <option value="53">Thriller</option>
+                    <option value="10752">War</option>
+                </select>
             </form>
+            <button id="prev-page">Previous Page</button>
+            <button id="next-page">Next Page</button> 
+                
         </header>
-        <main id="main"></main>
+        <main id="main">
+            <div class="left-zone"></div>
+            <div class="right-zone"></div>
+        </main>
+
     </body>
 
 </html>
